force-app/main/default/objects/cpm__Payment_Journey_Rule__c/cpm__Payment_Journey_Rule__c.object-meta.xml
<CustomObject>
    <label>Payment Journey Rule</label>
    <nameField>
        <label>Payment Journey Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Journey Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>