force-app/main/default/objects/cpm__Payment_Journey_Rule__c/fields/cpm__Business_Days_After_Previous_Step__c.field-meta.xml
<CustomField>
    <fullName>cpm__Business_Days_After_Previous_Step__c</fullName>
    <label>Business Days After Previous Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>