force-app/main/default/objects/cpm__Payment_Journey_Rule__c/fields/cpm__Collect_Nr_Of_Business_Days_After_Run__c.field-meta.xml
<CustomField>
    <fullName>cpm__Collect_Nr_Of_Business_Days_After_Run__c</fullName>
    <label>Collect Nr Of Business Days After Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>