force-app/main/default/objects/cpm__Payment_Journey_Rule__c/fields/cpm__Payment_Journey__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Journey__c</fullName>
    <label>Payment Journey</label>
    <referenceTo>cpm__Payment_Journey__c</referenceTo>
    <relationshipLabel>Payment Journey Rules</relationshipLabel>
    <relationshipName>Payment_Journey_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>