force-app/main/default/objects/cpm__Payment_Journey_Rule__c/fields/cpm__Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>