force-app/main/default/objects/cpm__Payment_Journey_Rule__c/fields/cpm__Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recollect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>