force-app/main/default/objects/cpm__Payment_Journey_Rule__c/validationRules/cpm__Recollect_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Recollect_Type_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>if (AND (ISPICKVAL( cpm__Type__c , &apos;Recollect&apos;),ISBLANK( cpm__Collect_Nr_Of_Business_Days_After_Run__c )),true,false)</errorConditionFormula>
    <errorDisplayField>cpm__Collect_Nr_Of_Business_Days_After_Run__c</errorDisplayField>
    <errorMessage>Collect number of Business Days After Run is required for &apos;Recollect&apos; Type</errorMessage>
</ValidationRule>